index on master: 8bc341a 20190916

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,14 @@
 <!--index.wxml-->
 <view class="index">
-  <view class="topIndex">
-    <view class="baner-left" bindtap='Gocity' style="background-color:rgba(89, 107, 107,0.6);">
+  <view class="search">
+    <!-- <view class="baner-left" bindtap='Gocity' style="background-color:rgba(89, 107, 107,0.6);">
       <view class="address" >宁波</view>
-    </view>
-    <input type="text" placeholder="搜索"></input>
+    </view> -->
+    <!-- <input type="text" placeholder="搜索" id="btnSearch"></input> -->
+     <navigator url="/pages/search/search" class="input">
+      <image class="icon"></image>
+      <text class="txt">搜索</text>
+    </navigator>
   </view>
 
       <!-- banner -->
@@ -24,4 +28,88 @@
         </view>
       </view>
   
+
+  <view class="tion">
+    <view class='tion_li'>
+      <view class='tion_lia' bindtap="tapLogs" >
+        <image src='../../images/tion_decoration.png' class='tion_li_ioc' background-size="cover" mode='scaleToFill'></image>
+         <text class='tion_li_text'>装修</text>
+      </view>
+
+      <view class='tion_lia' bindtap="tapLogs" >
+        <image src='../../images/tion_application.png' class='tion_li_ioc' background-size="cover" mode='scaleToFill'></image>
+         <text class='tion_li_text'>家电</text>
+      </view>
+
+      <view class='tion_lia' bindtap="tapLogs" >
+        <image src='../../images/tion_furniture.png' class='tion_li_ioc' background-size="cover" mode='scaleToFill'></image>
+         <text class='tion_li_text'>家具</text>
+      </view>
+
+      <view class='tion_lia' bindtap="tapLogs" >
+        <image src='../../images/tion_carloan.png' class='tion_li_ioc' background-size="cover" mode='scaleToFill'></image>
+         <text class='tion_li_text'>车贷分期</text>
+      </view>
+
+      <view class='tion_lia' bindtap="tapLogs" >
+        <image src='../../images/tion_carstall.png' class='tion_li_ioc' background-size="cover" mode='scaleToFill'></image>
+         <text class='tion_li_text'>车位</text>
+      </view>
+    </view>
+  </view>
+
+  <view class="separate"></view>
+
+  <view class="limitSale">
+    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">限时优惠</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </navigator>
+    <scroll-view class='sectionImg' scroll-x="true" style=" white-space: nowrap; display: flex">
+      <view class="HDS_style">
+        <navigator>
+          <view style="width: 100px; height: 100px;">
+            <image style="width: 200rpx; height: 200rpx;margin-top:0" src="../../images/photo-1551446591-142875a901a1.jpg">
+            </image>
+          </view>
+          <view class="hdcpName">
+            <text class='shop_one_text'>iphone6s 16G</text>
+          </view>
+          <view class="hdcpPrice">
+            <text class='shop_new_price'>￥2999</text>
+            <text class='shop_old_price'>￥2999</text>
+          </view>
+        </navigator>
+      </view>
+    </scroll-view>
+  </view>
+
+  <view class="separate"></view>
+
+  <!-- 新品推荐 -->
+  <view class="newProduct">
+  <image class="newProduct_image" src="../../images/newProduct.svg"></image>
+  <text>新品推荐</text>
+  </view>
+  <!-- 新品推荐 -->
+
+   <view class="separate"></view>
+
+  <view class="hotCarport">
+    <view class="hotCarport_Title">
+    热门车位
+    </view>
+    <view class="hotCarport_Content">
+      <block wx:for="{{Carports}}" wx:for-item="carport" wx:key="key">
+              <swiper-item>
+                <view>
+                  <navigator url="{{mov.Url}}" hover-class="navigator-hover">
+                    <image src="{{mov.Picture}}" class="banner" background-size="cover" mode="scaleToFill"></image>
+                  </navigator>
+                </view>
+              </swiper-item>
+      </block>
+  </view>
 </view>
+</view>
+                  
