--- a/pages/projectDetail/projectDetail.wxml
+++ b/pages/projectDetail/projectDetail.wxml
@@ -5,30 +5,35 @@
   <view class="headShow">
     <scroll-view scroll-x class="bg-white nav">
       <view class="flex text-center">
-        <view class="cu-item flex-sub " wx:for="{{tabs}}" wx:key bindtap="tabSelect" data-id="{{index}}">
+        <view class="cu-item flex-sub " wx:for="{{imageLists}}" wx:key bindtap="tabSelect" data-id="{{index}}">
           <view class="cu-item flex-sub {{index==TabCur?'text-zdy-darkblue cur':''}}">
-            <text class="text-black">{{item}}</text>
+            <text class="text-black">{{item.position}}</text>
           </view>
         </view>
       </view>
     </scroll-view>
     <view>
-      <image src="{{imageLists[TabCur].src}}"></image>
+      <image src="{{imageLists[TabCur].pic}}" style="width:100%"></image>
     </view>
+
+
+    <view style="padding-top:32rpx;">
+      <view><text class="text-title1">{{imageLists[TabCur].title}}</text></view>
+      <view style="padding-top:5px;"><text class="text-info1">{{imageLists[TabCur].titleBack}}</text></view>
+      <view style="padding-top:5px;"><text class="text-info2">{{imageLists[TabCur].tagIds}}</text></view>
+      <view style="padding-top:13px;padding-bottom:17px;"><text class="text-info3">车位价：</text><text class="text-info4">￥{{imageLists[TabCur].price}}</text></view>
+    </view>
+
+
   </view>
   <view class="bodyShow">
-    <view style="padding-top:32rpx;">
-      <view><text class="text-title1">中环道小区</text></view>
-      <view style="padding-top:5px;"><text class="text-info1">【现房“光盘”最高送8万家电大礼包，无首付。给车一个 个家，名额只限前50名】</text></view>
-      <view style="padding-top:5px;"><text class="text-info2">零首付得10万车位/拿市值10万赠品/得10万商城购物券</text></view>
-      <view style="padding-top:13px;padding-bottom:17px;"><text class="text-info3">车位价：</text><text class="text-info4">￥10000</text></view>
-    </view>
+    
  
   <view class="sperate" style="padding-left:0"></view>
   <view class="giftType" style="padding-bottom:200rpx;padding-top:18rpx;">
     <!-- <view style="font-size:14px;font-weight:Regular;">礼包集合</view> -->
     <view class="flex solid-bottom padding justify-start">
-      <view class="giftTypeCell zd-bg-gray margin-right-sm radius {{index==giftTabCur?'zd-text':''}}"  wx:for="{{llGiftsList}}" wx:key bindtap="giftTabSelect" data-id="{{index}}" data-imgid="{{item}}">{{item}}</view>
+      <view class="giftTypeCell zd-bg-gray margin-right-sm radius {{index==giftTabCur?'zd-text':''}}"  wx:for="{{llGiftsList}}" wx:key bindtap="giftTabSelect" data-id="{{index}}" data-imgid="{{item}}">{{item.name}}</view>
     </view>
 
     <scroll-view  scroll-x="true" style=" white-space: nowrap; display: flex">
